--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                 <ul class="navContainer">
                     <li><a href="https://www.youtube.com/channel/UCihZIP4E7Hy5EMZW6zQqfhQ">Past Creations</a></li>
                     <li><a href="https://www.facebook.com/musicalstorystudio">Our Members</a></li>
-                
-                    <li><a href="https://www.facebook.com/musicalstorystudio">Our Story</a></li>
-                    <li><a href="https://www.facebook.com/musicalstorystudio">Book Us</a></li>
+                    <li><a href="https://musicalstorystudio.wufoo.com/forms/z1uy98ua0gvlsot/
+                        ">Children's Workshop Registration</a></li>
+                    <!-- <li><a href="https://www.facebook.com/musicalstorystudio">Our Story</a></li> -->
+                    <!-- <li><a href="https://www.facebook.com/musicalstorystudio">Book Us</a></li> -->
                     <li><a href="mailto:musicalstorystudio@gmail.com">Contact</a></li>                 
                 </ul>
             </nav>        
